got rid of commented out content from the js file, added overflow and padding to the text area to make sure the password doesn't extend outside of the box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,5 +5,6 @@
 #password-area {
     border: dashed green 2px;
     font-size: 30px;
-    padding: 20% 0;
+    padding: 20% 5%;
+    overflow-x: hidden;
 }
